--- a/day1/자코모 실습.html
+++ b/day1/자코모 실습.html
@@ -25,6 +25,7 @@
     <div class="img1">
         <h1>Leather</h1>
         <p>프리미엄 가죽</p>
+        <!-- figure -->
         <img src="./자코모 실습이미지1번.jpg" alt="자코모">
     </div>
    </article>
