--- a/day1/자코모실습.html
+++ b/day1/자코모실습.html
@@ -25,7 +25,7 @@
         position: absolute;
         bottom: 0;
         padding: 25px;
-
+        transform: translate(50%);
       }
 
       .text_area > h1 {
@@ -42,17 +42,19 @@
         line-height: 1.5;
       }
 
-      .fabric_box {
+      /* .fabric_box {
         position: absolute;
         bottom: 0;
         padding: 25px;
         z-index: 2;
-      }
+      } */
 
       .container > div:hover{
         flex-shrink: 0;
         transition:0.3s;
       }
+
+      
     </style>
 </head>
 <body>
