--- a/day1/자코모실습.html
+++ b/day1/자코모실습.html
@@ -54,7 +54,14 @@
         transition:0.3s;
       }
 
+      img {
+        transition: 0.7s;
+      }
+
       
+      img:hover {
+        transform: scale(1.1);
+      }
     </style>
 </head>
 <body>
