--- a/day2/시멘틱구조.html
+++ b/day2/시멘틱구조.html
@@ -11,6 +11,7 @@
         width: 100%;
         height: 50px;
         background-color: cornflowerblue;
+        padding: 15px;
     }
 
     li {
@@ -19,6 +20,7 @@
         border: 1px solid #000;
         font-weight: bold;
         font-size: 25px;
+        left: 0;
 
     }
 
@@ -48,6 +50,8 @@
         background-color: blue;
         border-radius: 15px;
         color: #fff;
+        display: flex;
+        right: 0;
         
     }
 
@@ -55,8 +59,12 @@
     footer {
         width: 100%;
         height: 100px;
+        margin-top: 15px;
         text-align: center;
         background-color: cornflowerblue;
+        font-weight: bold;
+        font-size: 50px;
+        
     }
 </style>
 
@@ -116,7 +124,7 @@
         <aside>
             <div>
                 <h3>흑백요리사 우승자는 누구?</h3>
-                <p>두부 지옥에 빠진 에드워드리와 ~~</p>
+                <p>두부 지옥에 빠진 에드워드리와 무..물코기</p>
             </div>
         </aside>
     </div>
