--- a/day3/가상요소메뉴이펙트 답안.html
+++ b/day3/가상요소메뉴이펙트 답안.html
@@ -50,6 +50,30 @@
             opacity: 1;
             transform: translateY(15px);
         }
+
+        a::before {
+            content: '';
+            width: 100%;
+            height: 1px;
+            background-color: #fff;
+            display: block;
+            margin-bottom: 16px;
+            opacity: 1;
+        }
+
+        a:hover::before {
+            height: 5px;
+            transition: 0.3s;
+        }
+
+        a > span:last-child::after {
+            content: '';
+            width: 100%;
+            height: 1px;
+            background-color: #fff;
+            display: block;
+            margin-top: 16px;
+        }
     </style>
 </head>
 <body>
