--- a/day5/돌아가는아이콘.html
+++ b/day5/돌아가는아이콘.html
@@ -25,8 +25,12 @@
             color: #fff;
         }
 
+        div:hover {
+            transform: rotate(50deg);
+            transition: 0.3s;
+        }
 
-        .icon:hover {
+        /* .icon:hover {
             animation-name: plusAniamation
             animation-duration:2s
             animation-iteration-count:3;
@@ -45,7 +49,7 @@
             100% {
                 transform: rotate(-50deg);
             }
-        }
+        } */
     </style>
 </head>
 
