--- a/day6/구 애니메이션.html
+++ b/day6/구 애니메이션.html
@@ -8,6 +8,11 @@
         .container {
             padding: 25px;
             display: flex;
+            animation-name: ballani;
+            animation-duration: 10s;
+            animation-direction: normal;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
         }
 
         .ball1 {
@@ -32,6 +37,16 @@
             border-radius: 50px;
             background-color: gold;
             margin: 16px;
+        }
+
+        @keyframes ballani {
+            0% {
+
+            }
+
+            100% {
+                
+            }
         }
     </style>
 </head>
