--- a/day6/구 애니메이션.html
+++ b/day6/구 애니메이션.html
@@ -8,11 +8,6 @@
         .container {
             padding: 25px;
             display: flex;
-            animation-name: ballani;
-            animation-duration: 10s;
-            animation-direction: normal;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
         }
 
         .ball1 {
@@ -21,6 +16,12 @@
             border-radius: 50px;
             background-color: gold;
             margin: 16px;
+            animation-name: ballAni;
+            animation-duration: 2s;
+            animation-timing-function:2;
+            animation-direction: normal;
+            animation-fill-mode: forwards;
+            animation-iteration-count: infinite;
         }
 
         .ball2 {
@@ -29,6 +30,12 @@
             border-radius: 50px;
             background-color: gold;
             margin: 16px;
+            animation-name: ballani2;
+            animation-duration: 2s;
+            animation-timing-function:2;
+            animation-direction: normal;
+            animation-fill-mode: forwards;
+            animation-iteration-count: infinite;
         }
 
         .ball3 {
@@ -37,15 +44,29 @@
             border-radius: 50px;
             background-color: gold;
             margin: 16px;
+            animation-name:ballani3;
+            animation-duration: 2s;
+            animation-timing-function:2;
+            animation-direction: normal;
+            animation-fill-mode: forwards;
+            animation-iteration-count: infinite;
         }
 
-        @keyframes ballani {
-            0% {
-
+        @keyframes ballAni {
+            20% {
+                transform: translateY(-50px);
             }
+        }
 
-            100% {
-                
+        @keyframes ballani2 {
+            60% {
+                transform: translateY(-50px);
+            }
+        }
+
+        @keyframes ballani3 {
+            80% {
+                transform: translateY(-55px);
             }
         }
     </style>
