--- a/day6/구 애니메이션.html
+++ b/day6/구 애니메이션.html
@@ -17,11 +17,12 @@
             background-color: gold;
             margin: 16px;
             animation-name: ballAni;
-            animation-duration: 2s;
+            animation-duration: 1s;
             animation-timing-function:2;
             animation-direction: normal;
             animation-fill-mode: forwards;
             animation-iteration-count: infinite;
+            
         }
 
         .ball2 {
@@ -31,11 +32,12 @@
             background-color: gold;
             margin: 16px;
             animation-name: ballani2;
-            animation-duration: 2s;
+            animation-duration: 1s;
             animation-timing-function:2;
             animation-direction: normal;
             animation-fill-mode: forwards;
             animation-iteration-count: infinite;
+            
         }
 
         .ball3 {
@@ -45,11 +47,12 @@
             background-color: gold;
             margin: 16px;
             animation-name:ballani3;
-            animation-duration: 2s;
+            animation-duration: 1s;
             animation-timing-function:2;
             animation-direction: normal;
             animation-fill-mode: forwards;
             animation-iteration-count: infinite;
+            animation-timing-function: linear;
         }
 
         @keyframes ballAni {
