--- a/day7/에그드랍 실습.html
+++ b/day7/에그드랍 실습.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>에그드랍 실습페이지</title>
     <style>
+
+        @font-face {
+            font-family: 'HakgyoansimPuzzleTTF-Outline';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimPuzzleTTF-Outline.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         section {
             width: 100%;
             display: flex;
@@ -12,6 +20,7 @@
         }
 
         h1 {
+            font-family: 'HakgyoansimPuzzleTTF-Outline';
             font-size: 60px;
             margin: 30px;
             padding: 40px;
