--- a/day7/에그드랍 실습.html
+++ b/day7/에그드랍 실습.html
@@ -33,6 +33,7 @@
             animation-duration: 5s;
             animation-direction: normal;
             animation-iteration-count: infinite;
+            animation-fill-mode: forwards;
         }
 
 
@@ -48,7 +49,7 @@
             }
 
             to {
-                transform: translateX(-5px);
+                transform: translateX(-1%);
             }
         }
     </style>
