--- a/day7/에그드랍 실습.html
+++ b/day7/에그드랍 실습.html
@@ -24,6 +24,10 @@
             font-size: 60px;
             margin: 30px;
             padding: 40px;
+            top: -50px;
+            left: 50%;
+            transform: translate(-50%);
+            
             z-index: 2;
             position: absolute
         }
@@ -49,7 +53,7 @@
             }
 
             to {
-                transform: translateX(-1%);
+                transform: translateX(0);
             }
         }
     </style>
