--- a/day8/미디어실습2.html
+++ b/day8/미디어실습2.html
@@ -14,16 +14,19 @@
             margin: 16px;
             padding: 15px;
             background-color: rgb(214, 45, 45);
+            transform: translateX(50%);
             
         }
 
 
         @media (max-width:1280px) {
-            .box:nth-child(6) {
-                align-items:center;
+            .box:nth-child(7) {
+                align-items: center;
                 justify-content: space-between;
             }
-        }       
+        }      
+
+        
     </style>
 </head>
 <body>
