--- a/day10/카카오헤더 실습.html
+++ b/day10/카카오헤더 실습.html
@@ -68,6 +68,7 @@
 
         
         .mobile {
+            font-family: 'Pretendard-Regular';
             display: flex;
             justify-content: space-between;
             border-bottom: 1px solid #bdbdbd;
