카카오헤더 숙제 실습
헤더 아이콘 크기 수정

--- a/day10/카카오헤더 실습.html
+++ b/day10/카카오헤더 실습.html
@@ -143,15 +143,15 @@
                 </nav>
                 <div class="header_right">
                     <figure>
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
                     </figure>
     
                     <figure>
-                        <i class="fa-solid fa-globe"></i>
+                        <i class="fa-solid fa-globe fa-lg"></i>
                     </figure>
     
                     <figure>
-                        <i class="fa-regular fa-moon"></i>
+                        <i class="fa-regular fa-moon fa-lg"></i>
                     </figure>
                 </div>
             </div>
@@ -172,11 +172,11 @@
             <h1>kakao</h1>
             <div class="mobile_right">
                 <figure>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass fa-lg"></i>
                 </figure>
 
                 <figure>
-                    <i class="fa-solid fa-burger"></i>
+                    <i class="fa-solid fa-burger fa-lg"></i>
                 </figure>
             </div>
 
