--- a/day10/카카오헤더 실습.html
+++ b/day10/카카오헤더 실습.html
@@ -99,6 +99,12 @@
                 display: none;
             }
         }
+
+        @media (max-width: 760px) {
+            .mobile_bottom > div > i {
+                display: none;
+            }
+        }
     </style>
 </head>
 
