--- a/day10/카카오헤더 실습.html
+++ b/day10/카카오헤더 실습.html
@@ -24,7 +24,7 @@
         
         .header_top > h1 {
             font-family: 'Pretendard-Regular';
-            margin: 32px;
+            padding: 0 20px;
         }
         
         .header_top > nav > ul {
