--- a/day12/웹사이트 클론.html
+++ b/day12/웹사이트 클론.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <style>
         body {
             width: 100vh;
+            background-color: #fafafaad;
         }
 
         li {
@@ -14,6 +16,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div>
@@ -35,39 +38,42 @@
     </header>
 
     <section>
-        <h1>모임이 쉬워진다! 
-            <br>
-            우리끼리 밴드
-        </h1>
-        <p>당신의 모임도 BAND로 시작하세요</p>
-        
-        <div class="form_button">
-            <button>로그인</button>
-            <button>회원가입</button>
-        </div>
-
-        <ul>
-            <li>
-              내게 맞는 밴드를 만나려면  <a href="#">밴드 찾기</a>
-            </li>
-            <li>
-               요일별 밴드 활용법 <a href="#">밴드 가이드 보기</a>
-            </li>
-            <li>
-               만 13세 미만이라면? <a href="#">'밴드 키즈'알아보기</a>
-            </li>
-        </ul>
-
         <figure>
-            <img src="" alt="">
-            <div>
-                <h2>모임을 위한 공간, 밴드</h2>
-                <p>밴드는 그룹멤버와 함께하는 공간입니다.
-                    <br>
-                    동호회, 스터디 , 주제별 모임을 밴드로 시작하세요.
-                </p>
+            <img src="./네이버밴드 메인.jpg" alt="phone_UI">
+            <h1>모임이 쉬워진다!
+                <br>
+                우리끼리 밴드
+            </h1>
+            <p>당신의 모임도 BAND로 시작하세요</p>
+
+            <div class="form_button">
+                <button>로그인</button>
+                <button>회원가입</button>
             </div>
+
+            <ul>
+                <li>
+                    내게 맞는 밴드를 만나려면 <a href="#">밴드 찾기</a>
+                </li>
+                <li>
+                    요일별 밴드 활용법 <a href="#">밴드 가이드 보기</a>
+                </li>
+                <li>
+                    만 13세 미만이라면? <a href="#">'밴드 키즈'알아보기</a>
+                </li>
+            </ul>
         </figure>
+
+            <figure>
+                <img src="./네이버밴드 섹션.jpg" alt="meeting">
+                <div>
+                    <h2>모임을 위한 공간, 밴드</h2>
+                    <p>밴드는 그룹멤버와 함께하는 공간입니다.
+                        <br>
+                        동호회, 스터디 , 주제별 모임을 밴드로 시작하세요.
+                    </p>
+                </div>
+            </figure>
     </section>
 
     <ul class="intro_area">
@@ -79,7 +85,8 @@
                 <h3>어떤 모임이라도!</h3>
                 <p>친구, 가족, 동료 등 함께 하고 싶은 사람과
                     <br>
-                    우리만의 공간을 만들어보세요.</p>
+                    우리만의 공간을 만들어보세요.
+                </p>
             </div>
         </li>
         <li>
@@ -90,7 +97,8 @@
                 <h3>모임에 딱 맞는 기능들</h3>
                 <p>투표로 의견을 모으고, 함께 일정을 공유하며
                     <br>
-                    게시판과 앨범에는 추억을 쌓아보세요.</p>
+                    게시판과 앨범에는 추억을 쌓아보세요.
+                </p>
             </div>
         </li>
         <li>
@@ -109,9 +117,57 @@
 
     <div class="about_band">
         <h2>이런 밴드는 어때요</h2>
-        <div class="bands"></div>
+        <div class="bands">
+            <nav>
+                <ul>
+                    <li>
+                        <p> 매일 크로키하기
+                            <span>
+                                매일 크로키
+                            </span>
+                        </p>
+                    </li>
+                    <li>
+                        <p> 영어필사
+                            <span></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p> 가수 영탁 팬밴드
+                            <span></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p> 한국도로공사여자배구단
+                            <span></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p> 대한축구협회팬밴드
+                            <span></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p> 지속가능한 고독의 기술 :The Art of Self-Recharging Pow
+                            <span></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p> 매일 5천보 걷기
+                            <span></span>
+                        </p>
+                    </li>
+                    <li>
+                        <p>애플 사용자들의 모임
+                            <span></span>
+                        </p>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
     <footer></footer>
 </body>
+
 </html>
