--- a/day13/현대자동차 클론.html
+++ b/day13/현대자동차 클론.html
@@ -89,14 +89,14 @@
             max-width: 100%;
         }
 
-        /* .slide_car .slidelist {
+        .slide_car .slidelist {
             white-space: nowrap;
             /* 자식요소 줄바꿈 없애기 */
-            font-size: 0;
+            /* font-size: 0; */
             /* 빈 공간 생성을 위함 */
-            overflow: hidden;
+            /* overflow: hidden; */
             /* 넘어가는 부분 숨기기 */
-        } */
+        }
 
         .slide_car .sldieitem {
             position: relative;
